--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title: The Allan Lab
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   Website of the AllanLab.
-baseurl: ""
+baseurl: "zwzhang-quantum"
 url: ""
 
 include:
