--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,9 @@ title: The Allan Lab
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   Website of the AllanLab.
-baseurl: "/zwzhang-quantum"
-url: "https://zwzhang-quantum.github.io"
+url: https://gbu-zhanglab.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl: "/zhanglab" # the subpath of your site, e.g. "/blog"
+repository: "gbu-zhanglab/zhanglab"
 
 include:
   - .htaccess
