--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,6 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # 'jekyll serve'. If you change this file, please restart the server process.
 
-theme: minima
 
 # Site settings
 title: The Zhang Lab
@@ -13,7 +12,7 @@ email: zhangzhaowei@gbu.edu.cn
 description: > # this means to ignore newlines until "baseurl:"
   Website of the ZhangLab.
 url: https://gbu-zhanglab.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl: "/zhanglab" # the subpath of your site, e.g. "/blog"
+baseurl: "/gbu-zhanglab.github.io" # the subpath of your site, e.g. "/blog"
 repository: "gbu-zhanglab/gbu-zhanglab.github.io"
 
 include:
