--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title: The Zhang Lab
 email: zhangzhaowei@gbu.edu.cn
 description: > # this means to ignore newlines until "baseurl:"
   Website of the ZhangLab.
-url: "https://gbu-zhanglab.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url: https://gbu-zhanglab.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl: "/zhanglab" # the subpath of your site, e.g. "/blog"
 repository: "gbu-zhanglab/zhanglab"
 
