--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Website of the ZhangLab.
 url: https://gbu-zhanglab.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl: "/zhanglab" # the subpath of your site, e.g. "/blog"
-repository: "gbu-zhanglab/zhanglab"
+repository: "gbu-zhanglab/gbu-zhanglab.github.io"
 
 include:
   - .htaccess
