--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ email: zhangzhaowei@gbu.edu.cn
 description: > # this means to ignore newlines until "baseurl:"
   Website of the ZhangLab.
 url: https://gbu-zhanglab.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl: "/zhanglab" # the subpath of your site, e.g. "/blog"
+baseurl: "" # the subpath of your site, e.g. "/blog"
 repository: "gbu-zhanglab/gbu-zhanglab.github.io"
 
 include:
