--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -4,8 +4,8 @@
   email: zhangzhaowei@gbu.edu.cn
   number_educ: 3
   education1: Bachelor of Sicence, <a href="https://www.scu.edu.cn/">Sichuan University</a>
-  education2: PhD, <a href="https://www.ntu.edu.sg/">Nanyang Technological University</a> with <a href="https://www.ntu.edu.sg/">Prof. Weibo Gao</a>
-  education3: Postdoc PhD, <a href="https://www.ntu.edu.sg/">Nanyang Technological University</a> with <a href="https://www.ntu.edu.sg/">Prof. Weibo Gao</a>
+  education2: PhD, <a href="https://www.ntu.edu.sg/">Nanyang Technological University</a> with <a href="https://www1.spms.ntu.edu.sg/~weibogroup/">Prof. Weibo Gao</a>
+  education3: Postdoc PhD, <a href="https://www.ntu.edu.sg/">Nanyang Technological University</a> with <a href="https://www1.spms.ntu.edu.sg/~weibogroup/">Prof. Weibo Gao</a>
 
 
 - name: "This could be you !"
