--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -1,5 +1,5 @@
 - title: "Controlled large non-reciprocal charge transport in an intrinsic magnetic topological insulator MnBi2Te4"
-  image: imageaward_edited.png
+  image: MBT_device.png
   description: Large non-reciprocal charge transport is observed in MnBi2Te4, which can be manipulated by layer number, edge, magnetic field and gate voltage.
   authors: Zhaowei Zhang, Naizhou Wang, Ning Cao, Aifeng Wang, Xiaoyuan Zhou, Kenji Watanabe, Takashi Taniguchi, Binghai Yan, Wei-bo Gao
   link:
