--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -5,4 +5,4 @@
   number_educ: 3
   education1: Bachelor of Sicence, <a href="https://www.scu.edu.cn/">Sichuan University</a>
   education2: PhD, <a href="https://www.ntu.edu.sg/">Nanyang Technological University</a> with <a href="https://www1.spms.ntu.edu.sg/~weibogroup/">Prof. Weibo Gao</a>
-  education3: Postdoc PhD, <a href="https://www.ntu.edu.sg/">Nanyang Technological University</a> with <a href="https://www1.spms.ntu.edu.sg/~weibogroup/">Prof. Weibo Gao</a>
+  education3: Postdoc, <a href="https://www.ntu.edu.sg/">Nanyang Technological University</a> with <a href="https://www1.spms.ntu.edu.sg/~weibogroup/">Prof. Weibo Gao</a>
