--- a/_data/alumni_msc.yml
+++ b/_data/alumni_msc.yml
@@ -1,1 +1,11 @@
+- name: Hongxu Zhu
+  photo: Hongxu.jpg
+  info: Master's Student, started Sept 2024
+  number_educ: 1
+  education1: Bachelor of Engineering, Dongguan University of Technology
 
+- name: Haipeng Liu
+  photo: Hongxu.jpg
+  info: Master's Student, started Sept 2024
+  number_educ: 1
+  education1: Bachelor of Engineering, Shenzhen University
