--- a/_data/master_students.yml
+++ b/_data/master_students.yml
@@ -2,10 +2,10 @@
   photo: Hongxu.jpg
   info: Master's Student, started Sept 2024
   number_educ: 1
-  education1: Bachelor of Engineering, Dongguan University of Technology
+  education1: BSc, Dongguan University of Technology
 
 - name: Haipeng Liu
-  photo: Hongxu.jpg
+  photo: Haipeng.jpg
   info: Master's Student, started Sept 2024
   number_educ: 1
-  education1: Bachelor of Engineering, Shenzhen University
+  education1: BSc, Shenzhen University
