--- a/_data/master_students.yml
+++ b/_data/master_students.yml
@@ -1,11 +1,13 @@
 - name: Hongxu Zhu
   photo: Hongxu.jpg
   info: Master's Student, started Sept 2024
+  email: 242524002@stu.gbu.edu.cn
   number_educ: 1
   education1: BSc, Dongguan University of Technology
 
 - name: Haipeng Liu
   photo: Haipeng.jpg
   info: Master's Student, started Sept 2024
+  email: 242524001@stu.gbu.edu.cn
   number_educ: 1
   education1: BSc, Shenzhen University
